deploy/objects/Corso__c.object
<CustomObject>
    <fields>
        <fullName>Nome_Corso__c</fullName>
        <label>Nome Corso</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Giornata__c</fullName>
        <label>Numero Giornata</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo__c</fullName>
        <label>Prezzo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Corso</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Corso Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corsi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>